--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,24 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.cinema_app.MainActivity">
+
+    <item
+        android:id="@+id/menu_cadastro"
+        android:title="Cadastro"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_lista"
+        android:title="Lista"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_detalhes"
+        android:title="Detalhes"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
